--- a/client/old/old.html
+++ b/client/old/old.html
@@ -7,7 +7,7 @@
         window.localStorage.setItem('debug', '*');
     </script>
 
-    <!--      <script src="../renderer.js"></script>-->
+    <!--      <script src="../renderer-record.js"></script>-->
     <script src="old-bundle.js"></script>
 
 </head>
