--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -7,7 +7,7 @@
     <script src="vue_loader.js"></script>
     <script src="rtc_cli.js"></script>
 </head>
-<body onload="Client.main()">
+<body onload="">
 <div id="app">
     <app></app>
 </div>
