--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="ipc.js"></script>
     <script src="vue_2.6.11.js"></script>
     <script src="vue_loader.js"></script>
     <script src="rtc_cli.js"></script>
